[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
config = { version = "0.15.19", features = ["toml"] }
glam = "0.30.9"
rapier2d = { version = "0.31.0", features = ["simd-stable"] }
rcgen = "0.14.6"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
bytemuck = { version = "1.15", features = ["derive"] }
borsh = "1.6.0"
bevy_ecs = "0.17.3"
wtransport = "0.6.1"
dashmap = "6.1.0"
thiserror = "2.0.17"
borsh-derive = "1.6.0"
shared = { path = "../shared", features = ["server"] }
tracing-subscriber = "0.3.22"
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
parking_lot = "0.12.5"
futures = "0.3.31"
chacha20poly1305 = "0.10.1"
rand = "0.8"
rand_core = "0.6"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10.9"
pqc_kyber = { version = "0.7.1", features = ["kyber768", "90s", "avx2"] }
hkdf = "0.12.4"
nanorand = { version = "0.7.0", features = ["wyrand"] }